Fix UI alignment on tx and txp

--- a/src/pages/tx-details/tx-details.scss
+++ b/src/pages/tx-details/tx-details.scss
@@ -68,8 +68,8 @@ page-tx-details {
       }
       .icon-bitcoin {
         margin: 9px 2rem 9px 0;
-        width: 30px;
-        height: 30px;
+        width: 25px;
+        height: 25px;
         padding: 3px 8px;
         border: 1px solid color($colors, grey);
         border-radius: $icon-border-radius;
